# webhook-inspector

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  commitlint.config.js  compose.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml
.rules/: WEBHOOK_CONTRACT.md
src/webhook_inspector/: __init__.py  __main__.py  app.py  tunnel.py
tests/: test_app.py
