[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webhook-inspector"
version = "0.1.0"
description = "A local receiver for testing mailkube webhooks, with a cloudflared quick tunnel."
authors = [{ name = "Mailtactic, Corp." }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["webhook", "cloudflared", "fastapi", "mailkube", "testing"]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.49.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/mailkube/webhook-inspector"
Repository = "https://github.com/mailkube/webhook-inspector"
Issues = "https://github.com/mailkube/webhook-inspector/issues"

[project.scripts]
webhook-inspector = "webhook_inspector.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=2.2.0",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webhook_inspector"]

# ── Lint & format ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# ── Type checking ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["src"]

# ── Tests & coverage ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=webhook_inspector --cov-report=term-missing:skip-covered"

[tool.coverage.run]
source = ["webhook_inspector"]
omit = ["*/__main__.py", "*/tunnel.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
